index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');

:root {
  --white: #ffffff;
  --black: #000000;
  --white: #ffffff;
  --gray-50: #f9fafb;
  --gray-100: #f3f4f6;
  --gray-200: #e5e7eb;
  --gray-300: #d1d5db;
  --gray-400: #9ca3af;
  --gray-500: #6b7280;
  --blue: #3aa1ff;
  --green: #32cd32;
  --purple: #634fed;
  --logo: #f1edfd;
  --email: #3aa1ff;
  --github: #0a081d;
  --btn-live-bg-black: rgba(0, 0, 0, 0.15);
  --btn-live-bg-white: rgba(255, 255, 255, 0.15);
  --btn-shadow: 0px 6px 24px 0px rgba(0, 0, 0, 0.05),
    0px 0px 0px 1px rgba(0, 0, 0, 0.08);
  --shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);
}

body {
  font-family: 'Inter', sans-serif;
  font-size: 16px;
  line-height: 1.5;
  color: var(--black);
  font-weight: 400;
  background-color: var(--gray-50);
}

* {
  margin: 0;
  padding: 0;
}

*,
::before,
::after {
  box-sizing: border-box;
}

a {
  color: var(--white);
  text-decoration: none;
}

svg {
  fill: currentColor;
}

button {
  all: unset;
}

b,
strong {
  font-weight: 600;
}

* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

h1 {
  font-size: 24px;
  font-weight: 300;
  line-height: 1.2;
}

@media screen and (min-width: 768px) {
  h1 {
    font-size: 28px;
  }
}

h2 {
  font-size: 20px;
  font-weight: 300;
  line-height: 1.4;
}

@media screen and (min-width: 768px) {
  h2 {
    font-size: 24px;
  }
}

small {
  display: block;
  font-size: 12px;
  color: var(--gray-400);
  font-family: 'Roboto Mono', monospace;
}

small span {
  color: var(--green);
  font-weight: 600;
}

.main {
  display: flex;
  justify-content: center;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 80px;
  width: 100%;
  max-width: 500px;
  padding: 0 20px;
  padding-left: 80px;
  position: relative;
}

@media screen and (min-width: 768px) {
  .content {
    padding-left: 20px;
  }
}

.row {
  display: flex;
  align-items: flex-start;
  width: 100%;
}

.row-content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 40px;
}

.about {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 20px;
}

.projects {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}

.subtitle {
  color: var(--gray-400);
}

.projects-links {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 16px;
  margin-left: -8px;
}

/* Project */

.badge {
  display: inline-block;
  padding: 4px 12px;
  border-radius: 100px;
  background-color: var(--gray-100);
}

.project-images {
  width: 100%;
  position: relative;
}

.image {
  display: block;
  width: 100%;
  height: auto;
}

.figure {
  position: relative;
  filter: drop-shadow(0px 24px 48px rgba(0, 0, 0, 0.15));
}

.img {
  display: block;
  width: 100%;
  height: auto;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.project-dental .figure:nth-child(1) {
  margin-right: 16.666667%;
}
.project-dental .figure:nth-child(2) {
  margin-top: -75%;
  margin-left: 58.333333%;
}

/* .project-note .figure:nth-child(1) {
  margin-right: 16.666667%;
} */

.project-note .figure:nth-child(2) {
  margin-top: -58.333333%;
  margin-right: 8.333333%;
  margin-left: 58.333333%;
}

.project-retro .figure:nth-child(1) {
  margin-right: 41.666667%;
}

.project-retro .figure:nth-child(2) {
  margin-top: -100%;
  margin-left: 41.666667%;
}

.project-grocery .figure:nth-child(1) {
  margin-right: 41.666667%;
  z-index: 1;
}

.project-grocery .figure:nth-child(2) {
  position: absolute;
  margin-top: -110%;
  margin-left: 50%;
}

.project-info {
  width: 100%;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 16px;
}

.features-list {
  padding-left: 20px;
  margin-top: 16px;
}

.features-list li::marker {
  color: var(--gray-300);
}

/* Link */

.link {
  font-size: 18px;
  padding: 4px 8px;
  border-radius: 12px;
  color: var(--black);
  background-color: transparent;
  transition: all 200ms ease-in-out;
}

.link:hover {
  background-color: var(--gray-100);
}

.project-link svg {
  transform: rotate(-45deg);
}

.link svg {
  vertical-align: middle;
  margin-bottom: 3px;
  margin-left: 2px;
}

/* Nav Left */

.nav-left {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: 40px;
  height: 100vh;
  margin-top: 20px;
  margin-left: -60px;
  z-index: 999;
}

@media screen and (min-width: 768px) {
  .nav-left {
    margin-left: -80px;
  }
}

.nav-content {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  gap: 16px;
  width: 40px;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.navigation {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-top: 16px;
  border-top: 1px solid var(--gray-200);
}

.nav-item {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 12px;
  color: var(--black);
  background-color: var(--white);
  box-shadow: var(--btn-shadow);
  transition: all 200ms ease-in-out;
}

.avatar {
  font-size: 28px;
  font-weight: 600;
  line-height: 1;
  transform: rotate(-10deg);
}

.nav-item:hover {
  transform: rotate(0deg) scale(1.1);
}

.copyright {
  font-size: 14px;
  color: var(--gray-400);
}

/* Animation */

.slide-in {
  opacity: 0;
  transform: translateY(20px);
  filter: blur(1px);
}

.slide-in.active {
  animation: slideIn 1s ease-in forwards;
}

@keyframes slideIn {
  from {
    opacity: 0;
    transform: translateY(20px);
    filter: blur(1px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
    filter: blur(0px);
  }
}

